src/language/tests/error/imports.prez
import "imports/folder/subfolder/file.prez"
import "imports/does_not_exist.prez"
import "imports/folder2/subfolder/file.prez"
import "imports/folder/subfolder/file.prez"
import "imports/other_file.prez"


int func() {
  return 6;
}

void main() {
  folder2::subfolder::file::func(true);
  otherFunc();
  other_file::otherFunc(3);
  file::func();
  subfolder::file::func(4);
  func(true || false);

  other_file::Rectangle r1 = Rectangle(1, 3);
  print(r1.perimeter());

  file::Rectangle r2 = folder::subfolder::file::Rectangle(3, 3);
  print(r2.area());
}
